--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -24,10 +24,14 @@
 .sidebar {
   background-color: var(--color-grey-dark-1);
   flex: 0 0 18%; // don't want it to grow if there is space don't want it to shrink if there is no space
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .hotel-view {
   background-color: #fff;
   background-color: orangered;
   flex: 1;
+  height: 80rem;
 }
