--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -203,7 +203,7 @@
 .overview {
   display: flex;
   align-items: center;
-  border-bottom: 0.1rem solid var(--color-grey-light-2);
+  border-bottom: var(--line);
 
   &__heading {
     font-size: 2.25rem;
@@ -298,5 +298,74 @@
   100% {
     transform: scale(1);
     box-shadow: none;
+  }
+}
+
+/////////////////////////////////
+//PARAGRAPH
+.paragraph:not(:last-of-type) {
+  // we use last-of-type bc there are other el after the 2 paragraphs
+  margin-bottom: 2rem;
+}
+
+/////////////////////////////////
+//LIST
+.list {
+  list-style: none;
+  margin: 3rem 0;
+  padding: 3rem 0;
+  border-top: var(--line);
+  border-bottom: var(--line);
+  display: flex;
+  flex-wrap: wrap;
+
+  &__item {
+    flex: 0 0 50%; // 50% bc we want 2 el side by side
+    margin-bottom: 0.7rem;
+  }
+
+  &__item::before {
+    content: "";
+    display: inline-block;
+    height: 1.5rem;
+    width: 1.5rem;
+    margin-right: 0.7rem;
+
+    //older browsers
+    // background-image: url(../img/chevron-small-right.svg);
+    // background-size: cover;
+
+    //Newer browsers - masks
+    background-color: var(--color-primary);
+    -webkit-mask-image: url(../img/chevron-small-right.svg);
+    -webkit-mask-size: cover;
+  }
+}
+
+/////////////////////////////////
+//RECOMMEND
+.recommend {
+  font-size: 1.3rem;
+  color: var(--color-grey-dark-3);
+  display: flex;
+  align-items: center;
+
+  &__photo {
+    box-sizing: content-box; // exception here bc we don't want the padding from the border to shrink the pictures, with the default property the padding is not added
+    height: 4rem;
+    width: 4rem;
+    border-radius: 50%;
+    border: 0.3rem solid #fff;
+  }
+
+  &__photo:not(:last-child) {
+    margin-right: -1.5rem;
+  }
+
+  &__count {
+    margin-right: auto;
+  }
+
+  &__friends {
   }
 }
