--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -37,24 +37,23 @@
 .detail {
   display: flex;
   padding: 4.5rem;
+  font-size: 1.4rem;
   background-color: var(--color-grey-light-1);
   border-bottom: var(--line);
-
 }
 
-.description { 
+.description {
   font-size: 1.4rem;
   background-color: #fff;
   box-shadow: var(--shadow-light);
   padding: 3rem;
   flex: 0 0 60%;
   margin-right: 4.5rem;
-
-
 }
 
 .user-reviews {
-  background-color: yellow;
   flex: 1;
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
