--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -14,6 +14,13 @@
   align-items: center;
   justify-content: center;
 
+  @media only screen and (max-width: $bp-smallest) {
+    order: 1;
+    flex: 0 0 100%;
+    background-color: var(--color-grey-light-2);
+
+}
+
   &__input {
     font-family: inherit;
     font-size: inherit;
@@ -125,36 +132,49 @@
   list-style: none;
   margin-top: 3.5rem;
 
+  @media only screen and (max-width: $bp-medium) {
+    display: flex;
+    margin: 0;
+  }
+
   &__item {
     position: relative;
 
     &:not(:last-child) {
       margin-bottom: 0.5rem;
+
+      @media only screen and (max-width: $bp-medium) {
+        margin: 0;
+      }
+
+      @media only screen and (max-width: $bp-medium) {
+        flex: 1;
+      }
     }
-  }
 
-  &__item::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 0.3rem;
-    background-color: var(--color-primary);
-    transform: scaleY(0);
-    transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s,
-      background-color 0.1s;
-    // we can set different settings for different properties
-  }
+    &__item::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 0.3rem;
+      background-color: var(--color-primary);
+      transform: scaleY(0);
+      transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s,
+        background-color 0.1s;
+      // we can set different settings for different properties
+    }
 
-  &__item:hover::before,
-  &__item--active::before {
-    transform: scaleY(1);
-    width: 100%;
-  }
+    &__item:hover::before,
+    &__item--active::before {
+      transform: scaleY(1);
+      width: 100%;
+    }
 
-  &__item:active::before {
-    background-color: var(--color-primary-light);
+    &__item:active::before {
+      background-color: var(--color-primary-light);
+    }
   }
 
   &__link:link,
@@ -169,6 +189,16 @@
 
     display: flex;
     align-items: center;
+
+    @media only screen and (max-width: $bp-medium) {
+      justify-content: center;
+      padding: 2rem;
+    }
+
+    @media only screen and (max-width: $bp-small) {
+      flex-direction: column;
+      padding: 1.5rem 5rem;
+    }
   }
 
   &__icon {
@@ -176,6 +206,13 @@
     width: 1.75rem;
     margin-right: 2rem;
     fill: currentColor; // current color of the parent el
+
+    @media only screen and (max-width: $bp-small) {
+      margin-right: 0;
+      margin-bottom: .7rem;
+      width: 1.5rem;
+      height: 1.5rem;
+    }
   }
 }
 
@@ -186,6 +223,10 @@
   color: var(--color-grey-light-4);
   text-align: center;
   padding: 2.5rem;
+
+  @media only screen and (max-width: $bp-medium) {
+    display: none;
+  }
 }
 
 /////////////////////////////////
@@ -211,6 +252,11 @@
     text-transform: uppercase;
     letter-spacing: 0.1rem;
     padding: 1.5rem 3rem;
+
+    @media only screen and (max-width: $bp-small) {
+      font-size: 1.8rem;
+      padding: 1.25rem 2rem;
+    }
   }
 
   &__stars {
@@ -246,17 +292,29 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    @media only screen and (max-width: $bp-small) {
+      padding: 0 1.5rem;
+    }
   }
 
   &__rating-average {
     font-size: 2.25rem;
     font-weight: 300;
     margin-bottom: -0.3rem;
+
+    @media only screen and (max-width: $bp-small) {
+      font-size: 1.8rem;
+    }
   }
 
   &__rating-count {
     font-size: 0.8rem;
     text-transform: uppercase;
+
+    @media only screen and (max-width: $bp-small) {
+      font-size: .5rem;
+    }
   }
 }
 
@@ -341,13 +399,18 @@
     margin-right: 0.7rem;
 
     //older browsers
-    // background-image: url(../img/chevron-small-right.svg);
-    // background-size: cover;
+    background-image: url(../img/chevron-small-right.svg);
+    background-size: cover;
 
     //Newer browsers - masks
-    background-color: var(--color-primary);
-    -webkit-mask-image: url(../img/chevron-small-right.svg);
-    -webkit-mask-size: cover;
+    @supports (-webkit-mask-image: url()) or (mask-image: url()) {
+      background-color: var(--color-primary);
+      -webkit-mask-image: url(../img/chevron-small-right.svg);
+      -webkit-mask-size: cover;
+      mask-image: url(../img/chevron-small-right.svg);
+      mask-size: cover;
+      background-image: none;
+    }
   }
 }
 
@@ -368,7 +431,7 @@
   }
 
   &__photo:not(:last-child) {
-    margin-right: -1.5rem;
+    margin-right: -2rem;
   }
 
   &__count {
@@ -376,6 +439,7 @@
   }
 
   &__friends {
+    display: flex;
   }
 }
 
@@ -387,12 +451,17 @@
   padding: 3rem;
   margin-bottom: 3.5rem;
   position: relative;
+  overflow: hidden;
+
+  @media only screen and (max-width: $bp-medium) {
+    padding: 2rem;
+    margin-bottom: 3rem;
+  }
 
   &__text {
     margin-bottom: 2rem;
     z-index: 10;
     position: relative; // don't forget when using z-index you need to add position!
-    overflow: hidden;
   }
 
   &__user {
@@ -448,6 +517,10 @@
   padding: 3.5rem 0;
   text-align: center;
 
+  @media only screen and (max-width: $bp-medium) {
+    padding: 2.5rem 0;
+  }
+
   &__book-now {
     font-size: 1.5rem;
     font-weight: 300;
@@ -474,43 +547,43 @@
   overflow: hidden;
   cursor: pointer;
 
-  & > * {
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    transition: all 0.2s;
-  }
+    & > * {
+      display: inline-block;
+      height: 100%;
+      width: 100%;
+      transition: all 0.2s;
+    }
 
-  &__visible {
-    padding: 2rem 7.5rem;
-  }
+    &__visible {
+      padding: 2rem 7.5rem;
+    }
 
-  &__invisible {
-    position: absolute;
-    padding: 2rem 0;
-    left: 0;
-    top: -100%;
-  }
+    &__invisible {
+      position: absolute;
+      padding: 2rem 0;
+      left: 0;
+      top: -100%;
+    }
 
-  &:hover {
-    background-image: linear-gradient(
-      to left,
-      var(--color-primary),
-      var(--color-primary-dark)
-    );
-  }
+    &:hover {
+      background-image: linear-gradient(
+        to left,
+        var(--color-primary),
+        var(--color-primary-dark)
+      );
+    }
 
-  &:hover &__visible {
-    transform: translateY(100%);
-    // we don't use top bc there is no position set on the el
-  }
+    &:hover &__visible {
+      transform: translateY(100%);
+      // we don't use top bc there is no position set on the el
+    }
 
-  &:hover &__invisible {
-    top: 0;
-  }
+    &:hover &__invisible {
+      top: 0;
+    }
 
-  &:focus {
-    outline: none;
-    animation: pulsate 1s infinite;
-  }
+    &:focus {
+      outline: none;
+      animation: pulsate 1s infinite;
+    }
 }
